# AbiWord

./: README.md
abi/: COPYRIGHT.TXT  CREDITS.TXT  GNUmakefile.in  GNUmakefile.stop  Makefile  README.TXT  aclocal.m4  autogen.err  config.status  configure  includes.mk
abi/docs/: AbiSourceCodeGuidelines.abw  AbiSource_DialogFramework.abw  AbiSource_Localization.abw  AbiWord_DocumentFormat.abw  AbiWord_FileImport.abw  AbiWord_LayoutDesign.abw  AbiWord_SourceOverview.abw  AbiWord_SpellCheck_Notes.abw  AbiWord_list_notes.txt  MacPort_Documentation.abw
abi/src/: GNUmakefile.in
abi/src/af/: GNUmakefile.in
abi/src/af/ev/: Makefile  (+1 more)
abi/src/be_project/: be_project.debug.proj  be_project.proj  be_project.proj copy
abi/src/bindings/: GNUmakefile.in
abi/src/config/: abi_defs.mk
abi/src/other/: GNUmakefile.in
abi/src/ren-org-config/: abi_rules.mk
abi/src/text/: GNUmakefile.in
cairo/: Makefile  config.h  config.status  configure  libtool
cairo/doc/: Makefile
cairo/pixman/: Makefile
cairo/src/: Makefile  cairo-beos.pc  cairo-features.h  cairo-font.c  cairo-gstate.c  cairo-pdf.pc  cairo-ps.pc  cairo-scaled-font.c  cairo-xlib-screen.c  cairo-xlib-xrender.pc  cairo-xlib.pc  cairo.pc
cairo/test/: Makefile
expat/: Makefile  config.status  configure  expat_config.h  libtool
expat/xmlwf/: xmlwf
fribidi/: Makefile  config.h  config.status  configure  configure-old  fribidi-config  fribidi.pc  libtool
libiconv/: .cvsignore  ABOUT-NLS  AUTHORS  COPYING.LIB  ChangeLog  DESIGN  INSTALL.generic  Makefile  Makefile.abi  Makefile.devel  Makefile.in  Makefile.msvc  Makefile.os2  NEWS  NOTES  PORTS  README  README.djgpp  README.os2  README.win32  THANKS  config.status  configure  libtool  testmk.abi
libiconv/autoconf/: config.guess  config.libpath  config.rpath  config.sub  install-reloc  install-sh
libiconv/include/: iconv.h.msvc-shared
libiconv/lib/: Makefile  Makefile.abi  charset.alias  config.h  config.h.msvc  iconv.c
libiconv/libcharset/: Makefile  Makefile.abi  config.h  config.status  libtool
libiconv/man/: Makefile
libiconv/po/: Makefile  Makefile.in  POTFILES  ru.gmo  sl.po
libiconv/src/: Makefile
libiconv/srclib/: Makefile
libiconv/tests/: Makefile
libpng/: Makefile.abi  Makefile.abi.head  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.ac  mkinstalldirs  pngconf.h
pbx/: README  README-MacOSX.abw  build_all.sh  build_devel.sh
pbx/expatpbx/: expat_config.h
pbx/poptpbx/: popt_config.h
pbx/wvpbx/: ReadMe-building.rtf  config.h  preparelibs.sh  wv.exports
popt/: Doxyfile  Makefile  config.h  config.h.in  config.status  configure  libtool  test1  test2  test3
popt/.deps/: findme.Plo  popt.Plo  poptconfig.Plo  popthelp.Plo  poptparse.Plo  test1.Po  test2.Po  test3.Po
popt/.libs/: libpopt.lai
popt/intl/: Makefile  plural.c  ref-add.sed  ref-del.sed
popt/po/: Makefile  Makefile.in  POTFILES
psiconv/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.msvc  config.status  configure  configure.in  libtool  mkinstalldirs
psiconv/compat/: Makefile  Makefile.am  Makefile.in  compat.h  dummy.c
psiconv/compat/.deps/: dummy.Plo
psiconv/psiconv/: .cvsignore  Makefile  Makefile.am  Makefile.in  buffer.c  buffer.h  checkuid.c  common.h  data.c  data.h  error.c  error.h  general.h  general.h.in  general.h.msvc  generate.h  generate_common.c  generate_driver.c  generate_image.c  generate_layout.c  generate_page.c  generate_routines.h  generate_simple.c  generate_texted.c  generate_word.c  list.c  list.h  misc.c  parse.h  parse_common.c  parse_driver.c  parse_formula.c  parse_image.c  parse_layout.c  parse_page.c  parse_routines.h  parse_sheet.c  parse_simple.c  parse_texted.c  parse_word.c
psiconv/psiconv/.deps/: buffer.Plo  checkuid.Plo  data.Plo  error.Plo  generate_common.Plo  generate_driver.Plo  generate_image.Plo  generate_layout.Plo  generate_page.Plo  generate_simple.Plo  generate_texted.Plo  generate_word.Plo  list.Plo  misc.Plo  parse_common.Plo  parse_driver.Plo  parse_formula.Plo  parse_image.Plo  parse_layout.Plo  parse_page.Plo  parse_sheet.Plo  parse_simple.Plo  parse_texted.Plo  parse_word.Plo
psiconv/psiconv/.libs/: libpsiconv.lai
wv/: Makefile  Makefile.be  config.cache  config.h  config.status  version.c  wv-incconfig  wv-libconfig  wvAbw  wvCleanLatex  wvDVI  wvDocBook  wvHtml  wvLatex  wvPDF  wvPS  wvText  wvWml
wv/examples/: other.doc  russ.doc  simpledoc_mix_of_8_and_16_bit_chars.doc
wv/expat/: Makefile
wv/exporter/: Makefile
wv/gateway/: cgi-lib.pl
wv/glib-wv/: Makefile
wv/iconv/: Makefile
wv/libole2/: Makefile
wv/magick/: Makefile  blob.h
wv/notes/: kb40.html
zlib/: ChangeLog  Makefile  Makefile.abi  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  jam  minigzip.c  trees.c  uncompr.c  zconf.h  zconf.in.h  zlib.html  zutil.c  zutil.h
(+236 files in other folders)
